Bug 278262 - JAR URIs should resolve relative URIs in the base section r=biesi sr=darin